<resources>
    <string name="app_name">ChatApp</string>
    <string name="email">Email...</string>
    <string name="email_text">Email</string>
    <string name="password">Password...</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="need_a_new_account">Need a new Account ?</string>
    <string name="or_login_using_your">or\n\nLogin Using your</string>
    <string name="phone_number">Phone Number</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="create_group">Create Group</string>
    <string name="user_name">user name</string>
    <string name="user_status">user status</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="type_message">type message here...</string>
    <string name="send_verification_code">Send Verification Code</string>
    <string name="fui_verify">Verify</string>
    <string name="SignUp">Signup</string>
    <string name="already_have_account">Already have an account ?</string>
    <string name="update">Update</string>
</resources>